data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1760.wast
;; 1. **Test Description**: Create a nested structure with a `loop` containing a conditional branch target using `br_if`, where the loop's parameters and the result types differ. Verify if the loop correctly handles the stack unwinding and the target's parameter set.    - **Constraint Checked**: Handling of operand stack for loops.    - **CFG Relation**: Ensures correct flow handling of conditional branches within loops.

(assert_invalid
  (module
    (func $differential_test (result i32)
      (loop (result i32)
        (br_if 0 (i32.const 1) (i64.const 1)) 
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)